tests/pass/cast/int2str.tox


fn main() {
  print 1 as str;//expect:1
}