tests/fail/assign/undefined.tox
fn main() {
    unknown = "what"; //error: Undefined variable 'unknown'
}